--- a/src/css/index.css
+++ b/src/css/index.css
@@ -540,9 +540,8 @@ button.restore {
 }
 button.grayer,
 button:disabled,
-button.unavailable-action {
-  --sat: 40%;
-  --sat2: 50%;
+button.unavailable-action,
+button.horizontal-scroll.unavailable-action::after {
   border: 1px solid hsl(var(--hue-primary), var(--sat-fade), 30%);
   background: linear-gradient(3deg, hsl(var(--hue-primary), var(--sat-fade), 95%) 0%, hsl(var(--hue-primary), var(--sat-fade), 60%) 33%, hsl(var(--hue-primary), var(--sat-fade), 25%) 55%, hsl(var(--hue-primary), var(--sat-fade), 3%) 100%);
   background-size: var(--bg-size);
@@ -551,17 +550,32 @@ button.unavailable-action {
 .light button.grayer,
 .light button:disabled,
 .light button.unavailable-action {
-  --sat: 30%;
-  --sat2: 50%;
   background: linear-gradient(3deg, hsl(var(--hue-primary), var(--sat-fade), 6%) 0%, hsl(var(--hue-primary), var(--sat-fade), 25%) 35%, hsl(var(--hue-primary), var(--sat-fade), 60%) 55%, hsl(var(--hue-primary), var(--sat-fade), 95%) 100%);
   background-size: var(--bg-size);
   background-position: 50% 3%;
 }
-button.unavailable-action:hover,
-button.unavailable-action:focus-visible {
+#root button.horizontal-scroll.unavailable-action {
+  z-index: 3;
+}
+#root button.unavailable-action,
+#root button.unavailable-action:hover,
+#root button.unavailable-action:focus-visible,
+#root button.horizontal-scroll.unavailable-action:hover::after,
+#root button.horizontal-scroll.unavailable-action:focus-visible::after {
   background-position: 50% 3%;
   color: var(--color-primary-20);
 }
+
+#root .light button.unavailable-action,
+#root .light button.unavailable-action:hover,
+#root .light button.unavailable-action:focus-visible,
+#root .light button.horizontal-scroll.unavailable-action::after,
+#root .light button.horizontal-scroll.unavailable-action:hover::after,
+#root .light button.horizontal-scroll.unavailable-action:focus-visible::after {
+  background-position: 50% 93%;
+  color: var(--color-primary-20);
+}
+
 button:disabled {
   pointer-events: none;
 }
